# phpspa

./: .gitattributes  .gitignore  .npmignore  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_RELEASE_NOTES_v1.1.5.md  README.md  RELEASE_NOTES_v1.1.5.md  RELEASE_NOTES_v1.1.8.md  TODO.md  _tmp_compress_debug.php  composer.json  mkdocs.yml  package-lock.json  package.json  phpunit.xml.dist  requirements.txt  rollup.config.js  semicolon_test.php  simple_test.php  speedTest.cpp  test_asset_encoding.php  tsconfig.json
.github/workflows/: build-compressor.yml  loc-badge.yml  php-tests.yml
app/client/: App.php  Component.php  DOM.php
app/core/: App.php  Component.php
app/exceptions/: AppException.php
app/interfaces/: ApplicationContract.php  IComponent.php  MapInterface.php  PhpSPAInterface.php  phpSpaInterfac.php  phpSpaInterface.php
docs/: 1-introduction.md  10-component-nesting.md  10.md  11-component-props.md  11.md  12-route-case-sensitivity.md  12.md  13.md  14-handling-error-routes.md  14.md  15-javascript-navigation.md  15.md  16-csrf-protection.md  17-state-management.md  18-component-script-and-styles.md  19-handling-loading-states.md  2-getting-started.md  2.md  20-request-handling.md  3-creating-your-first-component.md  3.md  4-routing-and-parameters.md  4.md  5-route-patterns-and-param-types.md  5.md  6-loading-events.md  6.md  7-layout-and-content-swap-mechanism.md  7.md  8-component-rendering-and-target-areas.md  8.md  9-navigating-between-pages.md  9.md  advanced-component-patterns.md  advanced-routing.md  api-authentication.md  assets-caching.md  auto-reloading-components.md  calling-php-from-javascript-usefunction.md  client-side-events-and-api.md  (+23 more)
docs/components/: advanced-component.md  index.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/hooks/: use-function.md  use-state.md
docs/integrations/: codeigniter-integration.md  index.md  laravel-integration.md  pure-php-integration.md  symfony-integration.md
docs/navigations/: link-component.md
docs/new/: mkdocs.yml
examples/: .htaccess  index.php
lib/: index.ts
new-docs/: first-app.md  index.md  installation.md  mkdocs.yml  quick-start.md  why-phpspa.md
old-docs/: 11-component-props.md  13-setting-page-titles.md  16-csrf-protection.md  2-getting-started.md  4-routing-and-parameters.md  final-notes.md  mkdocs.yml
site/: 404.html  index.html  sitemap.xml
src/: index.js  index.ts  main.cpp  phpspa.js
template/: .htaccess  Layout.php  app.php  index.php
tests/: AssetLinkTest.php  AsyncRequestTest.php  ComprehensiveJsCompressionTest.php  EnhancedJsCompressionTest.php  HtmlCompressionTest.php  JsCompressionTest.php  Test.html  Test.php  TodoJsCompressionTest.php  Utf8IntegrationTest.php
vite-example/: .gitignore  README.md  index.php
vite-template/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  composer.json  index.html  index.php  package.json  tsconfig.json  vercel.json  vite.config.ts
(+362 files in other folders)
